Project

General

Profile

Actions

Bug #22358

closed

assert if invalid address passed to ceph with --bind

Added by Shinobu Kinjo over 6 years ago. Updated almost 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Shinobu Kinjo
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

@dell-per730-11:build [master]$ ./bin/ceph -s --bind 0
  • DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH **
    2017-12-09 19:31:04.349 7f525cd1c700 -1 WARNING: all dangerous and experimental features are enabled.
    set_val_or_die(public_addr): /git/ceph/src/common/config.cc: In function 'void md_config_t::set_val_or_die(const string&, const string&, bool)' thread 7f525cd1c700 time 2017-12-09 19:31:04.366145
    /git/ceph/src/common/config.cc: 796: FAILED assert(ret == 0)
    ceph version 13.0.0-3886-g53be4ef (53be4ef96c73183fea5218b699a51f45d60a096a) mimic (dev)
    1: (ceph::__ceph_assert_fail(char const
    , char const*, int, char const*)+0x110) [0x7f526392efd0]
    2: (md_config_t::set_val_or_die(std::string const&, std::string const&, bool)+0x3a7) [0x7f5263bab517]
    3: (md_config_t::parse_argv(std::vector<char const*, std::allocator<char const*> >&)+0x8aa) [0x7f5263babf9a]
    4: (rados_conf_parse_argv_remainder()+0x103) [0x7f526c3105e3]
    5: (()+0x4cb9e) [0x7f526c649b9e]
    6: (PyEval_EvalFrameEx()+0x730a) [0x7f527509e0ca]
    7: (PyEval_EvalCodeEx()+0x7ed) [0x7f527509fefd]
    8: (PyEval_EvalFrameEx()+0x663c) [0x7f527509d3fc]
    9: (PyEval_EvalFrameEx()+0x67bd) [0x7f527509d57d]
    10: (PyEval_EvalCodeEx()+0x7ed) [0x7f527509fefd]
    11: (()+0x70858) [0x7f5275029858]
    12: (PyObject_Call()+0x43) [0x7f52750049a3]
    13: (()+0x5a995) [0x7f5275013995]
    14: (PyObject_Call()+0x43) [0x7f52750049a3]
    15: (PyEval_CallObjectWithKeywords()+0x47) [0x7f52750967b7]
    16: (()+0x1156e2) [0x7f52750ce6e2]
    17: (()+0x7e25) [0x7f5274da4e25]
    18: (clone()+0x6d) [0x7f52743c934d]
    NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
    Aborted
Actions #1

Updated by Shinobu Kinjo over 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Sage Weil almost 3 years ago

  • Status changed from In Progress to Closed
Actions

Also available in: Atom PDF