common: assertion with --bind and invalid ip address

fix: http://tracker.ceph.com/issues/22358

Signed-off-by: Shinobu Kinjo <shinobu@redhat.com>